tests/paczka1/small_fuzzy/21430585.err
Error in line 8: k8TWzIRq A304 36,0
Error in line 10: k8TWzIRq S681 94,5
